# SIMDIS SDK examples.

project(SIMDIS_SDK_Examples)

add_subdirectory(AnimatedLine)
add_subdirectory(AntennaPattern)
add_subdirectory(ArticulatedModel)
add_subdirectory(AsyncModelLoading)
add_subdirectory(BasicViewer)
add_subdirectory(BasicViewerText)
add_subdirectory(DBReader)
add_subdirectory(GeoFencing)
add_subdirectory(GOGAttachments)
add_subdirectory(GOGReader)
add_subdirectory(ImageIcons)
add_subdirectory(MapScale)
add_subdirectory(MassiveData)
add_subdirectory(ObserverMaker)
add_subdirectory(Ocean)
add_subdirectory(Overhead)
add_subdirectory(Periscope)
add_subdirectory(Picking)
add_subdirectory(PlatformSymbology)
add_subdirectory(Projectors)
add_subdirectory(RadialLOS)
add_subdirectory(RangeTool)
add_subdirectory(RCS)
add_subdirectory(RFProp)
add_subdirectory(RocketBurn)
add_subdirectory(LoadEarthFile)
add_subdirectory(LoadLayer)
add_subdirectory(SkyModel)
add_subdirectory(SimpleServer)
add_subdirectory(TimestampedLayer)

if(QT_FOUND)
    add_subdirectory(Qt)
    add_subdirectory(QtDockableViews)
    add_subdirectory(ColorWidgetTest)
    add_subdirectory(FileSelectorTest)
    add_subdirectory(TimeButtons)
    add_subdirectory(TimeWidgetTest)
    add_subdirectory(ActionItemModelTest)
    add_subdirectory(UnitsWidgetTest)
    add_subdirectory(EntityViewTest)
    add_subdirectory(EntityLineEditTest)
    add_subdirectory(ViewManagerQtTest)
    add_subdirectory(DataTableViewTest)
    add_subdirectory(ViewManagerDataModel)
    add_subdirectory(QThreadExample)
    add_subdirectory(ConsoleDataModel)
    add_subdirectory(CategoryFilterTest)
endif()


add_subdirectory(AngleTest)
add_subdirectory(BeamTest)
add_subdirectory(GateTest)
add_subdirectory(LocatorTest)
add_subdirectory(PlanetariumViewTest)
add_subdirectory(PlatformAzimElevViewTest)
add_subdirectory(LOBTest)
add_subdirectory(TrackHistoryTest)
add_subdirectory(ViewManagerTest)
add_subdirectory(ASIViewer)
add_subdirectory(LocalGrid)
