# SIMDIS SDK examples.

project(SIMDIS_SDK_Examples)

add_subdirectory(AnimatedLine)
add_subdirectory(AntennaPattern)
add_subdirectory(ArticulatedModel)
add_subdirectory(AsyncModelLoading)
add_subdirectory(BasicViewer)
add_subdirectory(BasicViewerText)
add_subdirectory(CentroidEyePosition)
add_subdirectory(CustomRenderingTest)
add_subdirectory(DBReader)
add_subdirectory(GeoFencing)
add_subdirectory(GOGAttachments)
add_subdirectory(GOGReader)
add_subdirectory(HudPositionManager)
add_subdirectory(ImageIcons)
add_subdirectory(MapScale)
add_subdirectory(MassiveData)
add_subdirectory(ObserverMaker)

if(HAVE_OSGEARTH_TRITON)
    add_subdirectory(Ocean)
endif()

add_subdirectory(Overhead)
add_subdirectory(Periscope)
add_subdirectory(Picking)
add_subdirectory(PlatformSymbology)
add_subdirectory(Projectors)
add_subdirectory(RadialLOS)
add_subdirectory(RangeTool)
add_subdirectory(RCS)
add_subdirectory(RFProp)
add_subdirectory(RocketBurn)
add_subdirectory(LoadEarthFile)
add_subdirectory(LoadLayer)
add_subdirectory(SkyModel)
add_subdirectory(SimpleServer)
add_subdirectory(TimestampedLayer)

if(QT_FOUND)
    add_subdirectory(Qt)
    add_subdirectory(QtActionItemModelTest)
    add_subdirectory(QtCategoryFilterTest)
    add_subdirectory(QtColorWidgetTest)
    add_subdirectory(QtConsoleDataModel)
    add_subdirectory(QtDataTableViewTest)
    add_subdirectory(QtDockableViews)
    add_subdirectory(QtEntityLineEditTest)
    add_subdirectory(QtEntityViewTest)
    add_subdirectory(QtFileSelectorTest)
    add_subdirectory(QtThreadExample)
    add_subdirectory(QtTimeButtons)
    add_subdirectory(QtTimeWidgetTest)
    add_subdirectory(QtUnitsWidgetTest)
    add_subdirectory(QtViewManagerDataModel)
    add_subdirectory(QtViewManagerTest)
endif()


add_subdirectory(AngleTest)
add_subdirectory(BeamTest)
add_subdirectory(GateTest)
add_subdirectory(LocatorTest)
add_subdirectory(PlanetariumViewTest)
add_subdirectory(PlatformAzimElevViewTest)
add_subdirectory(LOBTest)
add_subdirectory(TrackHistoryTest)
add_subdirectory(ViewManagerTest)
add_subdirectory(ASIViewer)
add_subdirectory(LocalGrid)
